--- a/webpacksty/views/index.tpl.ejs
+++ b/webpacksty/views/index.tpl.ejs
@@ -4,17 +4,17 @@
 <head>
     <meta charset="utf-8">
     <title>hideTitle</title>
-    <meta charset="UTF-8">
-    <meta property="qc:admins" content="1521476575645356367">
+    <meta charset="UTF-8" />
+    <meta property="qc:admins" content="1521476575645356367" />
     <!-- <meta name="google" value="notranslate" /> -->
-    <meta http-equiv="pragma" content="no-cache">
-    <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate">
-    <meta http-equiv="Expires" content="0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0,minimum-scale=1">
+    <meta http-equiv="pragma" content="no-cache" />
+    <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate" />
+    <meta http-equiv="Expires" content="0" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, minimum-scale=1.0">
 
-    <link type="image/x-icon" rel="Bookmark" href="https://static.leke.cn/images/common/favicon.ico">
-    <link type="image/x-icon" rel="shortcut icon" href="https://static.leke.cn/images/common/favicon.ico">
+    <link type="image/x-icon" rel="Bookmark" href="https://static.leke.cn/images/common/favicon.ico" />
+    <link type="image/x-icon" rel="shortcut icon" href="https://static.leke.cn/images/common/favicon.ico" />
     <script>
         (function() {
           var UA = navigator.userAgent;
@@ -36,7 +36,7 @@
 <body>
     <div id="container">
     </div>
-<script type="text/javascript" src="main.js"></script></body>
+</body>
 <script>
     javascript:(function () { var script = document.createElement('script'); script.src="//cdn.jsdelivr.net/npm/eruda"; document.body.appendChild(script); script.onload = function () { eruda.init() } })();
 </script>
