--- a/webpacksty/src/styles/reset.scss
+++ b/webpacksty/src/styles/reset.scss
@@ -1,5 +1,5 @@
 
-@import 'STYLES/base.scss';
+@import 'base.scss';
 body,h1,h2,h3,h4,h5,h6,p,dl,dd,ul,ol,pre,form,input,textarea,th,td,select {
     margin:0;
     padding: 0;
